step00_intro_python is created

--- a/00_intro_python.ipynb
+++ b/00_intro_python.ipynb
@@ -4,6 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "gpuType": "T4",
       "authorship_tag": "ABX9TyNIyuJ3xRb73z3voHupi2Ye",
       "include_colab_link": true
     },
@@ -13,7 +14,8 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -197,7 +199,7 @@
         "id": "QFUe4nubphuo",
         "outputId": "3bbe1e62-8ea4-4afa-f03d-b35163a805f4"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -234,7 +236,7 @@
         "id": "A1LZ2ALrspZ7",
         "outputId": "3089b624-1f66-4d7b-dcdc-1224735f879d"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
